--- a/git-101.md
+++ b/git-101.md
@@ -1,13 +1,38 @@
 Here you will know everything you need to know about Git and Git provider(GitHub)
 
-Staging Area = Add
+Staging = add
 
-Snapshot = Commit
+Snapshot = commit locally
 
-Production = Working
+Production = working
 
-Step 1: Create a folder in your local machine
+Push = pull the stuff from local repo to remote
 
-Step 2: Create a remote repository on GitHub
+Pull = get the stuff(latest changes) from remote to local
 
-Step 3: Locate your working directory in command prompt. Execute - git init - this will create an empty git repository in your local machine
+- Create a folder in your local machine
+
+- Create a remote repository on GitHub
+
+- Locate your working directory in command prompt. Execute:
+  git init  
+   note: this will create an empty git repository in your local machine
+
+- Get the remote repo link (GitHub repo link) and clone that remote repo into local machine
+  git clone <remote-repo-link>
+  note: this will connect the local repo and remote repo as in the changes you make in the local repo reflects on this remote repo once to stage, commit and push the code or files.
+
+- Now you can add files or code in the repo using any editor
+
+- Execute
+  git status
+  note: this command will show you the files you have to stage or once you stage ready to commit and all the info
+
+- Execute
+  git add <filename> (this will add only the file given) or
+  git add . (this will add all the files and changes made in the repo)
+  note: to add the file or code into staging area
+
+- Execute
+  git commit -m "commit message"
+  note: this will create a snapshot of the state of the file and ready to push remotely
