--- a/git-101.md
+++ b/git-101.md
@@ -36,3 +36,7 @@ Pull = get the stuff(latest changes) from remote to local
 - Execute
   git commit -m "commit message"
   note: this will create a snapshot of the state of the file and ready to push remotely
+
+- Execute
+  git push
+  note: this will send the snapshot and stores the files in remote repo
