--- a/git-101.md
+++ b/git-101.md
@@ -10,6 +10,10 @@ Push = pull the stuff from local repo to remote
 
 Pull = get the stuff(latest changes) from remote to local
 
+Clone = Creates an instance
+
+Scenario 1: You are starting afresh and creating a local repo and cloning the remote repo
+
 - Create a folder in your local machine
 
 - Create a remote repository on GitHub
@@ -20,7 +24,7 @@ Pull = get the stuff(latest changes) from remote to local
 
 - Get the remote repo link (GitHub repo link) and clone that remote repo into local machine
   git clone <remote-repo-link>
-  note: this will connect the local repo and remote repo as in the changes you make in the local repo reflects on this remote repo once to stage, commit and push the code or files.
+  note: this will create an instance of remote repo in your local machine
 
 - Now you can add files or code in the repo using any editor
 
@@ -40,3 +44,19 @@ Pull = get the stuff(latest changes) from remote to local
 - Execute
   git push
   note: this will send the snapshot and stores the files in remote repo
+
+Scenario 2: Intializing a repository locally and sync it to the remote repository
+
+- git init
+
+- git add .
+
+- git commit -m "your commit message"
+
+- git remote add origin <remote repo link>
+  note: all the changes you make in the local repo reflects on this remote repo once to stage, commit and push the code or files.
+
+- git push
+
+  note: git throws a fatal error but why?? but you can fix it! Git tells you what to do JUST DO IT
+  why? if you are adding an empty remote repo which doesn't have anything like any brannch to begin with - Git won't possibly know where to push the code - get it?
